Update ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ FilesExportCompleteFMP
 FilesExportIncomplete
 FilesExportIncompleteFMP
 FilesExportIndividualStockDFs
+Model_Data_high_acc
+Model_Data_low_acc
