--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,8 @@ Resources_Test
 FilesExport_TimeSeries_DFs
 FilesExport_DataDicts
 folders_to_keep_Jan2022.txt
+Functions
+Functions2
+FunctionsOld
+Functions_Analysis
+
