--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,8 @@ Resources_Test
 FilesExport_TimeSeries_DFs
 FilesExport_DataDicts
 folders_to_keep_Jan2022.txt
-Functions
-Functions2
-Functions_Analysis
+Functions/
+Functions2/
+Functions_Analysis/
+FunctionsOld
 
